# switchback-pricing-experiment

./: README.md  pyproject.toml
switchback_experiment/: consumers.py  experiment.py  firms.py  utility_functions.py
tests/: test_consumers.py  test_experiment.py  test_firms.py
