[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "switchback-pricing-sim"
description = "Switchback pricing experiment simulation"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Cory Cutsail", email = "corycutsail@gmail.com"}
]
maintainers = [
    {name = "Cory Cutsail", email = "corycutsail@gmail.com"}
]
keywords = ["economics", "pricing", "operations-research"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Economics",
]
dependencies = [
    "numpy>=1.26.4",
    "torch>=2.4.1",
    "matplotlib>=3.8.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "pandas>=2.2.3"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "isort>=5.8.0",
    "flake8>=3.9.2",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0.2",
    "sphinx-rtd-theme>=0.5.2",
]

[tool.setuptools_scm]
write_to = "_version.py"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'